[package]
name = "injm"
description = "A CLI tool that injects content into marked regions in source files."
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tree-sitter-language-pack = "1.12.0"

[dev-dependencies]
tempfile = "3.27.0"
